Fix overflowing code editor

--- a/frontend/src/pages/Room/Room.module.css
+++ b/frontend/src/pages/Room/Room.module.css
@@ -5,4 +5,11 @@
   margin-bottom: 50px;
   border-radius: 6px;
   width: 95%;
+  overflow: hidden;
+  resize: none;
+}
+
+/* Prevent code editor from stretching the browser when long texts are entered */
+.wrap {
+  display: grid;
 }
